[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://src/GUI/HealthBar.tscn" type="PackedScene" id=2]

[node name="Enemy" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 2
collision_mask = 20
script = ExtResource( 1 )

[node name="EnemySprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemyInfo" type="Position2D" parent="."]

[node name="DamageSkin" type="Position2D" parent="."]

[node name="HitEffectPosition" type="Position2D" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="SpoilPosition" type="Position2D" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
